<?xml version="1.0" encoding="utf-8"?>
<resources>
    <integer name="com_vk_sdk_AppId">5851095</integer>

    <!-- Login dialog -->
    <string name="enter_by_yourself">ENTER LOGIN/PASSWORD</string>
    <string name="enter_through_app">ENTER THROUGH APP</string>
    <string name="login_title">Choose an authorization method</string>
    <string name="skip_login">SKIP</string>
    <string name="policy_link_text"><a href="http://vktoppolicy.std-226.ist.mospolytech.ru/">Privacy Policy</a></string>

    <!-- Main Screen -->
    <string name="logout_menu_item">Log out</string>
    <string name="settings_menu_item">Settings</string>
    <string name="empty_title">Nothing sorted yet :(</string>
    <string name="empty_subtitle">Click the button in the lower right corner</string>
    <string-array name="delete_array">
        <item>Delete</item>
    </string-array>
    <string name="fab_title">Click here to sort posts</string>
    <string name="fab_subtitle">Due to the fact that sorting can take a long time, all sorted posts will be saved here</string>

    <!-- Group Screen -->
    <string name="new_sort_button_text">SORT POSTS</string>
    <string name="posts_number_label">Number of posts:</string>
    <string name="average_time_label">Average sort time:</string>
    <string name="max_time_label">Maximum sort time:</string>
    <string name="no_information" translatable="false">\???</string>
    <string name="members_count_label">Member count:</string>
    <string name="sort_interval_text">CHOOSE TIME INTERVAL</string>
    <string name="sort_interval_dialog_title">Choose time interval posts sorting.</string>
    <string name="choose_label">Choose</string>
    <string name="cancel_label">Cancel</string>
    <string-array name="time_interval">
        <item>For all time</item>
        <item>For last year</item>
        <item>For last month</item>
        <item>For last week</item>
        <item>For last day</item>
        <item>Choose by yourself</item>
    </string-array>
    <plurals name="seconds">
        <item quantity="zero">%1$d seconds</item>
        <item quantity="one">%1$d second</item>
        <item quantity="two">%1$d seconds</item>
        <item quantity="few">%1$d seconds</item>
        <item quantity="many">%1$d seconds</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="two">%1$d minutes</item>
        <item quantity="few">%1$d minutes</item>
        <item quantity="many">%1$d minutes</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string name="group_title_text">Group Information</string>

    <!-- Groups Screen -->
    <string name="disconnected_title_text">Connection is lost</string>
    <string name="disconnected_subtitle_text">Click the button to try again</string>
    <string name="disconnected_button_text">RETRY</string>
    <string name="groups_title_text">Choose a Group</string>
    <string name="global_search_label">Global search</string>

    <!-- Posts Screen -->
    <string name="sort_progress_dialog_title">Receiving posts\n(app may be minimized)</string>
    <string name="please_wait">Please, wait&#8230;</string>
    <string name="app_name" translatable="false">VKTop</string>
    <string-array name="sort_items">
        <item>By likes</item>
        <item>By shares</item>
        <item>By commentaries</item>
    </string-array>
    <string name="empty_message">Unfortunately there is no posts for selected period of time. Try another one. </string>
    <string name="link">Link</string>
    <string name="month_jan">January</string>
    <string name="month_feb">February</string>
    <string name="month_mar">March</string>
    <string name="month_apr">April</string>
    <string name="month_may">May</string>
    <string name="month_jun">June</string>
    <string name="month_jul">July</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">October</string>
    <string name="month_nov">November</string>
    <string name="month_dec">December</string>
    <string name="month_some">Some month</string>
    <string name="date">at</string>
    <plurals name="poll_size">
        <item quantity="zero">%1$d people voted</item>
        <item quantity="one">%1$d people voted</item>
        <item quantity="two">%1$d people voted</item>
        <item quantity="few">%1$d people voted</item>
        <item quantity="many">%1$d people voted</item>
        <item quantity="other">%1$d people voted</item>
    </plurals>
    <string name="doc_size">Mb</string>
    <plurals name="views">
        <item quantity="zero">%1$d views</item>
        <item quantity="one">%1$d view</item>
        <item quantity="two">%1$d views</item>
        <item quantity="few">%1$d views</item>
        <item quantity="many">%1$d views</item>
        <item quantity="other">%1$d view</item>
    </plurals>
    <plurals name="posts">
        <item quantity="zero">%1$d posts</item>
        <item quantity="one">%1$d post</item>
        <item quantity="two">%1$d posts</item>
        <item quantity="few">%1$d posts</item>
        <item quantity="many">%1$d posts</item>
        <item quantity="other">%1$d post</item>
    </plurals>

    <!-- Notification -->
    <string name="notification_title">Posts are sorted</string>
    <string name="notification_text">Click to open the app</string>

    <!-- Settings Screen -->
    <string name="settings_label">Settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="enable_notification_summary">Notifications report the end of the sorting when app is minimized</string>
    <string name="pref_tone">Notification ringtone</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_tone_silent">Silent</string>

</resources>