<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_notifications"
        android:summary="@string/enable_notification_summary"
        android:title="@string/notifications_title" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="enable_notifications"
        android:key="pref_tone"
        android:ringtoneType="notification"
        android:showDefault="true"
        android:showSilent="true"
        android:title="@string/pref_tone"/>

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="enable_notifications"
        android:key="notifications_vibrate"
        android:title="@string/pref_vibrate"/>
</PreferenceScreen>