<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <Button
        android:id="@+id/login_by_yourself_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_by_yourself"/>

    <Button
        android:id="@+id/login_through_app_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_through_app"/>

    <TextView
        android:id="@+id/policy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_link_text"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

</LinearLayout>